[package]
name = "all"
version = "0.1.0"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]
edition = "2018"

[dependencies]
one = { path = "../01" }
two = { path = "../02" }
three = { path = "../03" }
four = { path = "../04" }
five = { path = "../05" }
six = { path = "../06" }
template = { path = "../template" }
