[package]
name = "all"
version = "0.1.0"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]
edition = "2018"

[dependencies]
one = { path = "../01" }
two = { path = "../02" }
three = { path = "../03" }
four = { path = "../04" }
five = { path = "../05" }
six = { path = "../06" }
seven = { path = "../07" }
eight = { path = "../08" }
nine = { path = "../09" }
ten = { path = "../10" }
template = { path = "../template" }
